--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,237 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Scraping Concerts - Lab\n", "\n", "## Introduction\n", "\n", "Now that you've seen how to scrape a simple website, it's time to again practice those skills on a full-fledged site!\n", "In this lab, you'll practice your scraping skills on a music website: https://www.residentadvisor.net.\n", "## Objectives\n", "\n", "You will be able to:\n", "* Create a full scraping pipeline that involves traversing over many pages of a website, dealing with errors and storing data"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## View the Website\n", "\n", "For this lab, you'll be scraping the https://www.residentadvisor.net website. Start by navigating to the events page [here](https://www.residentadvisor.net/events) in your browser.\n", "\n", "<img src=\"images/ra.png\">"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Load the https://www.residentadvisor.net/events page in your browser."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Open the Inspect Element Feature\n", "\n", "Next, open the inspect element feature from your web browser in order to preview the underlying HTML associated with the page."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Open the inspect element feature in your browser"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Write a Function to Scrape all of the Events on the Given Page Events Page\n", "\n", "The function should return a Pandas DataFrame with columns for the Event_Name, Venue, Event_Date and Number_of_Attendees."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["def scrape_events(events_page_url):\n", "    #Your code here\n", "    df.columns = [\"Event_Name\", \"Venue\", \"Event_Date\", \"Number_of_Attendees\"]\n", "    return df"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Write a Function to Retrieve the URL for the Next Page"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["def next_page(url):\n", "    #Your code here\n", "    return next_page_url"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Scrape the Next 1000 Events for Your Area\n", "\n", "Display the data sorted by the number of attendees. If there is a tie for the number attending, sort by event date."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "Congratulations! In this lab, you successfully developed a pipeline to scrape a website for concert event information!"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping Concerts - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "Now that you've seen how to scrape a simple website, it's time to again practice those skills on a full-fledged site!\n",
+    "In this lab, you'll practice your scraping skills on a music website: https://www.residentadvisor.net.\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "* Create a full scraping pipeline that involves traversing over many pages of a website, dealing with errors and storing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View the Website\n",
+    "\n",
+    "For this lab, you'll be scraping the https://www.residentadvisor.net website. Start by navigating to the events page [here](https://www.residentadvisor.net/events) in your browser.\n",
+    "\n",
+    "<img src=\"images/ra.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the https://www.residentadvisor.net/events page in your browser."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open the Inspect Element Feature\n",
+    "\n",
+    "Next, open the inspect element feature from your web browser in order to preview the underlying HTML associated with the page."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the inspect element feature in your browser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a Function to Scrape all of the Events on the Given Page Events Page\n",
+    "\n",
+    "The function should return a Pandas DataFrame with columns for the Event_Name, Venue, Event_Date and Number_of_Attendees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://ra.co/events'\n",
+    "resp = requests.get(url)\n",
+    "soup = BeautifulSoup(resp.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<!--[if lt IE 7]> <html class=\"no-js ie6 oldie\" lang=\"en-US\"> <![endif]-->\n",
+       "<!--[if IE 7]>    <html class=\"no-js ie7 oldie\" lang=\"en-US\"> <![endif]-->\n",
+       "<!--[if IE 8]>    <html class=\"no-js ie8 oldie\" lang=\"en-US\"> <![endif]-->\n",
+       "<!--[if gt IE 8]><!--> <html class=\"no-js\" lang=\"en-US\"> <!--<![endif]-->\n",
+       "<head>\n",
+       "<title>Access denied | ra.co used Cloudflare to restrict access</title>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"/>\n",
+       "<meta content=\"IE=Edge,chrome=1\" http-equiv=\"X-UA-Compatible\"/>\n",
+       "<meta content=\"noindex, nofollow\" name=\"robots\"/>\n",
+       "<meta content=\"width=device-width,initial-scale=1\" name=\"viewport\"/>\n",
+       "<link href=\"/cdn-cgi/styles/main.css\" id=\"cf_styles-css\" media=\"screen,projection\" rel=\"stylesheet\" type=\"text/css\"/>\n",
+       "</head>\n",
+       "<body>\n",
+       "<div id=\"cf-wrapper\">\n",
+       "<div class=\"cf-alert cf-alert-error cf-cookie-error hidden\" data-translate=\"enable_cookies\" id=\"cookie-alert\">Please enable cookies.</div>\n",
+       "<div class=\"p-0\" id=\"cf-error-details\">\n",
+       "<header class=\"mx-auto pt-10 lg:pt-6 lg:px-8 w-240 lg:w-full mb-15 antialiased\">\n",
+       "<h1 class=\"inline-block md:block mr-2 md:mb-2 font-light text-60 md:text-3xl text-black-dark leading-tight\">\n",
+       "<span data-translate=\"error\">Error</span>\n",
+       "<span>1020</span>\n",
+       "</h1>\n",
+       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">Ray ID: 66defff68d80198e •</span>\n",
+       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">2021-07-13 02:14:48 UTC</span>\n",
+       "<h2 class=\"text-gray-600 leading-1.3 text-3xl lg:text-2xl font-light\">Access denied</h2>\n",
+       "</header>\n",
+       "<section class=\"w-240 lg:w-full mx-auto mb-8 lg:px-8\">\n",
+       "<div class=\"w-1/2 md:w-full\" id=\"what-happened-section\">\n",
+       "<h2 class=\"text-3xl leading-tight font-normal mb-4 text-black-dark antialiased\" data-translate=\"what_happened\">What happened?</h2>\n",
+       "<p>This website is using a security service to protect itself from online attacks.</p>\n",
+       "</div>\n",
+       "</section>\n",
+       "<div class=\"cf-error-footer cf-wrapper w-240 lg:w-full py-10 sm:py-4 sm:px-8 mx-auto text-center sm:text-left border-solid border-0 border-t border-gray-300\">\n",
+       "<p class=\"text-13\">\n",
+       "<span class=\"cf-footer-item sm:block sm:mb-1\">Cloudflare Ray ID: <strong class=\"font-semibold\">66defff68d80198e</strong></span>\n",
+       "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
+       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Your IP</span>: 162.243.6.197</span>\n",
+       "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
+       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Performance &amp; security by</span> <a href=\"https://www.cloudflare.com/5xx-error-landing\" id=\"brand_link\" rel=\"noopener noreferrer\" target=\"_blank\">Cloudflare</a></span>\n",
+       "</p>\n",
+       "</div><!-- /.error-footer -->\n",
+       "</div><!-- /#cf-error-details -->\n",
+       "</div><!-- /#cf-wrapper -->\n",
+       "<script type=\"text/javascript\">\n",
+       "  window._cf_translation = {};\n",
+       "  \n",
+       "  \n",
+       "</script>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_events(events_page_url):\n",
+    "    #Your code here\n",
+    "    df.columns = [\"Event_Name\", \"Venue\", \"Event_Date\", \"Number_of_Attendees\"]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a Function to Retrieve the URL for the Next Page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_page(url):\n",
+    "    #Your code here\n",
+    "    return next_page_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scrape the Next 1000 Events for Your Area\n",
+    "\n",
+    "Display the data sorted by the number of attendees. If there is a tie for the number attending, sort by event date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "Congratulations! In this lab, you successfully developed a pipeline to scrape a website for concert event information!"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
