Update scraping concerts lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,18 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://ra.co/events'\n",
+    "url = 'https://ra.co/events/newyork'\n",
     "resp = requests.get(url)\n",
     "soup = BeautifulSoup(resp.content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +116,8 @@
        "<span data-translate=\"error\">Error</span>\n",
        "<span>1020</span>\n",
        "</h1>\n",
-       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">Ray ID: 66defff68d80198e •</span>\n",
-       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">2021-07-13 02:14:48 UTC</span>\n",
+       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">Ray ID: 66e730692b0d3049 •</span>\n",
+       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">2021-07-14 02:05:58 UTC</span>\n",
        "<h2 class=\"text-gray-600 leading-1.3 text-3xl lg:text-2xl font-light\">Access denied</h2>\n",
        "</header>\n",
        "<section class=\"w-240 lg:w-full mx-auto mb-8 lg:px-8\">\n",
@@ -128,9 +128,9 @@
        "</section>\n",
        "<div class=\"cf-error-footer cf-wrapper w-240 lg:w-full py-10 sm:py-4 sm:px-8 mx-auto text-center sm:text-left border-solid border-0 border-t border-gray-300\">\n",
        "<p class=\"text-13\">\n",
-       "<span class=\"cf-footer-item sm:block sm:mb-1\">Cloudflare Ray ID: <strong class=\"font-semibold\">66defff68d80198e</strong></span>\n",
+       "<span class=\"cf-footer-item sm:block sm:mb-1\">Cloudflare Ray ID: <strong class=\"font-semibold\">66e730692b0d3049</strong></span>\n",
        "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
-       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Your IP</span>: 162.243.6.197</span>\n",
+       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Your IP</span>: 2601:187:100:7250:c40d:2c5:feac:d9e0</span>\n",
        "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
        "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Performance &amp; security by</span> <a href=\"https://www.cloudflare.com/5xx-error-landing\" id=\"brand_link\" rel=\"noopener noreferrer\" target=\"_blank\">Cloudflare</a></span>\n",
        "</p>\n",
@@ -146,7 +146,7 @@
        "</html>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,9 +215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
