--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,94 +70,169 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "import requests"
+    "import requests\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://ra.co/events/newyork'\n",
-    "resp = requests.get(url)\n",
+    "events_page_url = 'https://web.archive.org/web/20210325230938/https://ra.co/events/us/newyork?week=2019-03-30'\n",
+    "resp = requests.get(events_page_url)\n",
     "soup = BeautifulSoup(resp.content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "̸Sat, 30 MarUnterMania IIMary Yuzovskaya, Manni Dee, Umfang, Juana, The Lady MachineTBA - New YorkRARA Tickets457Cocoon New York: Sven Väth, Ilario Alicante, Butch & TaimurSven Vath, Butch, Taimur, Il\n",
+      "\n",
+      "Sun, 31 MarSunday: Soul SummitNowadaysRARA Tickets132New Dad & Aaron Clark (Honcho)Aaron Clark, New DadAce Hotel3ParadiscoOccupy The DiscoLe Bain3Sunday Soiree: Unknown Showcase (Detroit)Ryan Dahl, Ha\n"
+     ]
+    }
+   ],
+   "source": [
+    "events_all_div = soup.find('div', attrs = {\"data-tracking-id\": \"events-all\"})\n",
+    "\n",
+    "event_listings = events_all_div.find(\"ul\").find(\"li\")\n",
+    "\n",
+    "print(event_listings.text[:200])\n",
+    "print()\n",
+    "\n",
+    "march_31st_start = event_listings.text.find(\"Sun, 31 Mar\")\n",
+    "print(event_listings.text[march_31st_start:march_31st_start + 200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 index: ̸Sat, 30 MarUnterMania IIMary Yuzovskaya, Manni Dee, Umfang, Juana, The Lady MachineTBA - New YorkRARA Tickets457Cocoon New York: Sven Väth, Ilario Alicante, Butch & TaimurSven Vath, Butch, Taimur, Il\n",
+      "\n",
+      "1 index:  \n",
+      "\n",
+      "2 index ̸Sun, 31 MarSunday: Soul SummitNowadaysRARA Tickets132New Dad & Aaron Clark (Honcho)Aaron Clark, New DadAce Hotel3ParadiscoOccupy The DiscoLe Bain3Sunday Soiree: Unknown Showcase (Detroit)Ryan Dahl, H\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates = event_listings.findChildren(recursive=False)\n",
+    "\n",
+    "print(\"0 index:\", dates[0].text[:200])\n",
+    "print()\n",
+    "\n",
+    "print(\"1 index: \", dates[1].text)\n",
+    "print()\n",
+    "\n",
+    "print(\"2 index\", dates[2].text[:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<!DOCTYPE html>\n",
-       "\n",
-       "<!--[if lt IE 7]> <html class=\"no-js ie6 oldie\" lang=\"en-US\"> <![endif]-->\n",
-       "<!--[if IE 7]>    <html class=\"no-js ie7 oldie\" lang=\"en-US\"> <![endif]-->\n",
-       "<!--[if IE 8]>    <html class=\"no-js ie8 oldie\" lang=\"en-US\"> <![endif]-->\n",
-       "<!--[if gt IE 8]><!--> <html class=\"no-js\" lang=\"en-US\"> <!--<![endif]-->\n",
-       "<head>\n",
-       "<title>Access denied | ra.co used Cloudflare to restrict access</title>\n",
-       "<meta charset=\"utf-8\"/>\n",
-       "<meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"/>\n",
-       "<meta content=\"IE=Edge,chrome=1\" http-equiv=\"X-UA-Compatible\"/>\n",
-       "<meta content=\"noindex, nofollow\" name=\"robots\"/>\n",
-       "<meta content=\"width=device-width,initial-scale=1\" name=\"viewport\"/>\n",
-       "<link href=\"/cdn-cgi/styles/main.css\" id=\"cf_styles-css\" media=\"screen,projection\" rel=\"stylesheet\" type=\"text/css\"/>\n",
-       "</head>\n",
-       "<body>\n",
-       "<div id=\"cf-wrapper\">\n",
-       "<div class=\"cf-alert cf-alert-error cf-cookie-error hidden\" data-translate=\"enable_cookies\" id=\"cookie-alert\">Please enable cookies.</div>\n",
-       "<div class=\"p-0\" id=\"cf-error-details\">\n",
-       "<header class=\"mx-auto pt-10 lg:pt-6 lg:px-8 w-240 lg:w-full mb-15 antialiased\">\n",
-       "<h1 class=\"inline-block md:block mr-2 md:mb-2 font-light text-60 md:text-3xl text-black-dark leading-tight\">\n",
-       "<span data-translate=\"error\">Error</span>\n",
-       "<span>1020</span>\n",
-       "</h1>\n",
-       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">Ray ID: 66e730692b0d3049 •</span>\n",
-       "<span class=\"inline-block md:block heading-ray-id font-mono text-15 lg:text-sm lg:leading-relaxed\">2021-07-14 02:05:58 UTC</span>\n",
-       "<h2 class=\"text-gray-600 leading-1.3 text-3xl lg:text-2xl font-light\">Access denied</h2>\n",
-       "</header>\n",
-       "<section class=\"w-240 lg:w-full mx-auto mb-8 lg:px-8\">\n",
-       "<div class=\"w-1/2 md:w-full\" id=\"what-happened-section\">\n",
-       "<h2 class=\"text-3xl leading-tight font-normal mb-4 text-black-dark antialiased\" data-translate=\"what_happened\">What happened?</h2>\n",
-       "<p>This website is using a security service to protect itself from online attacks.</p>\n",
-       "</div>\n",
-       "</section>\n",
-       "<div class=\"cf-error-footer cf-wrapper w-240 lg:w-full py-10 sm:py-4 sm:px-8 mx-auto text-center sm:text-left border-solid border-0 border-t border-gray-300\">\n",
-       "<p class=\"text-13\">\n",
-       "<span class=\"cf-footer-item sm:block sm:mb-1\">Cloudflare Ray ID: <strong class=\"font-semibold\">66e730692b0d3049</strong></span>\n",
-       "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
-       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Your IP</span>: 2601:187:100:7250:c40d:2c5:feac:d9e0</span>\n",
-       "<span class=\"cf-footer-separator sm:hidden\">•</span>\n",
-       "<span class=\"cf-footer-item sm:block sm:mb-1\"><span>Performance &amp; security by</span> <a href=\"https://www.cloudflare.com/5xx-error-landing\" id=\"brand_link\" rel=\"noopener noreferrer\" target=\"_blank\">Cloudflare</a></span>\n",
-       "</p>\n",
-       "</div><!-- /.error-footer -->\n",
-       "</div><!-- /#cf-error-details -->\n",
-       "</div><!-- /#cf-wrapper -->\n",
-       "<script type=\"text/javascript\">\n",
-       "  window._cf_translation = {};\n",
-       "  \n",
-       "  \n",
-       "</script>\n",
-       "</body>\n",
-       "</html>"
+       "'Sat, 30 Mar'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup"
+    "first_date = dates[0]\n",
+    "\n",
+    "date = first_date.find(\"div\", class_ = \"sticky-header\").text\n",
+    "\n",
+    "date = date.strip(\"'̸\")\n",
+    "date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: UnterMania II\n",
+      "Venue: TBA - New York\n",
+      "Date: Sat, 30 Mar\n",
+      "Number of attendees: 457\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_date_events = first_date.findChildren(\"ul\")\n",
+    "\n",
+    "first_event = first_date_events[0]\n",
+    "\n",
+    "name = first_event.find(\"h3\").text\n",
+    "\n",
+    "venue_and_attendees = first_event.findAll(\"div\", attrs={\"height\": 30})\n",
+    "\n",
+    "venue = venue_and_attendees[0].text\n",
+    "\n",
+    "num_attendees = int(venue_and_attendees[-1].text)\n",
+    "\n",
+    "print(\"Name:\", name)\n",
+    "print(\"Venue:\", venue)\n",
+    "print(\"Date:\", date)\n",
+    "print(\"Number of attendees:\", num_attendees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'H0L0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-9f3bc35aba9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mvenue_and_attendees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlast_event\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"div\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"height\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mvenue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvenue_and_attendees\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnum_attendees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvenue_and_attendees\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'H0L0'"
+     ]
+    }
+   ],
+   "source": [
+    "last_event = first_date_events[-1]\n",
+    "\n",
+    "name = last_event.find(\"h3\").text\n",
+    "\n",
+    "venue_and_attendees = last_event.findAll(\"div\", attrs={\"height\": 30})\n",
+    "venue = venue_and_attendees[0].text\n",
+    "num_attendees = int(venue_and_attendees[-1].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
